package com.panda.study.designmodel.builder;

/**
 * Created by Administrator on 2019/7/29.
 */
public class Client {
    public static void main(String[] args) {
        CommonHouse commonHouse = new CommonHouse();
        commonHouse.build();
    }
}
